syntax = "proto3";

service Config {
    rpc CreateApp (AppRequest) returns (AppResponse) {}
    rpc DeleteApp (AppRequest) returns (Response) {}
    rpc ListApps (Request) returns (AppsResponse) {}

    rpc CreateCluster (ClusterRequest) returns (ClusterResponse) {}
    rpc DeleteCluster (ClusterRequest) returns (Response) {}
    rpc ListClusters (AppRequest) returns (ClustersResponse) {}

    rpc CreateNamespace (NamespaceRequest) returns (NamespaceResponse) {}
    rpc DeleteNamespace(NamespaceRequest) returns (Response) {}
//    rpc QueryNamespace(NamespaceRequest) returns (NamespaceResponse) {}
    rpc ListNamespaces(ClusterRequest)returns (NamespacesResponse){}

    rpc UpdateConfig (UpdateConfigRequest) returns (Response) {}

    rpc ReleaseConfig(ReleaseRequest) returns (Response) {}
    rpc ListReleaseHistory(NamespaceRequest) returns (ReleaseHistoryResponse) {}
    rpc Rollback(ReleaseRequest) returns (Response) {}

    rpc Read(QueryConfigRequest) returns (ConfigResponse) {}
    rpc Watch(Request) returns (stream ConfigResponse) {}
}

message AppRequest {
    string appName = 4;
    string description = 5;
}

message AppResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string description = 5;
}

message AppsResponse {
    repeated AppResponse apps = 1;
}

message ClusterRequest {
    string appName = 4;
    string clusterName = 5;
    string description = 6;
}

message ClusterResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string description = 6;
}

message ClustersResponse {
    repeated ClusterResponse clusters = 1;
}

message NamespaceRequest {
    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string format = 7;
    string description = 10;
}

message NamespaceResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string format = 7;
    string value = 8;
    bool   released = 9;
    string editValue = 10;
    string description = 11;
}

message NamespacesResponse {
    repeated NamespaceResponse namespaces = 1;
}

message UpdateConfigRequest {
    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string value = 8;
}

message QueryConfigRequest {
    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
}

message ConfigResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string format = 7;
    string value = 8;
}

message ReleaseRequest {
    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string tag = 7;
    string comment = 9;
}

message ReleaseResponse {
    int64 id = 1;
    int64 createdAt = 2;
    int64 updatedAt = 3;

    string appName = 4;
    string clusterName = 5;
    string namespaceName = 6;
    string tag = 7;
    string value = 8;
    string comment = 9;
    string type = 10;
}

message ReleaseHistoryResponse {
    repeated ReleaseResponse releaseHistory = 1;
}

message Request {
}

message Response {
}
